--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-nextcord == 2.4.0
-PyNaCl == 1.5.0
-whoosh == 2.7.4
-XProperties == 2.0.10
-boto3 == 1.26.81
+nextcord
+PyNaCl
+whoosh
+XProperties
+boto3
