--- a/global-configure-example.conf
+++ b/global-configure-example.conf
@@ -9,9 +9,9 @@ AWS_S3_NAME=
 
 # Path Configures
 BASE_PATH=
-LOCALE_PATH=
-CACHE_PATH=
-INDEX_PATH=
+LOCALE_PATH=locale/
+CACHE_PATH=temp/cache/
+INDEX_PATH=temp/index/
 
 # Entry Configures
 SERVER_CONF_ENTRY=dynamic/server-configure/
